kubernetes/applications/kitchenowl/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kitchenowl
  namespace: apps
spec:
  selector:
    matchLabels:
      app: kitchenowl
  strategy:
    type: Recreate
  revisionHistoryLimit: 3
  template:
    metadata:
      labels:
        app: kitchenowl
    spec:
      containers:
        - name: kitchenowl
          image: tombursch/kitchenowl:v0.6.15
          volumeMounts:
            - name: data
              mountPath: /data
          resources:
            limits:
              cpu: 50m
              memory: 1Gi
      volumes:
        - name: data
          persistentVolumeClaim:
            claimName: kitchenowl
