kubernetes/applications/kitchenowl/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: kitchenowl
  namespace: apps
spec:
  type: ClusterIP
  ports:
    - port: 8080
      targetPort: 8080
  selector:
    app: kitchenowl
