kubernetes/applications/kitchenowl/httproute.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: kitchenowl-route
  namespace: apps
spec:
  parentRefs:
    - name: traefik-gateway
      kind: Gateway
      namespace: traefik
  hostnames:
    - "kitchenowl.local.ildoc.it"
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: kitchenowl
          port: 8080
